deploy: c1372e27d87b6b56912cfc740651de6febbbef50

--- a/workshops/workshop2024.html
+++ b/workshops/workshop2024.html
@@ -508,17 +508,32 @@ document.write(`
 <tr class="row-odd"><td class="text-left"><p>1 pm - 4 pm</p></td>
 <td class="text-right"><p>Work on Python teaching materials individually in small groups</p></td>
 </tr>
-<tr class="row-even"><td class="text-left"><p>4 pm - 5 pm</p></td>
+<tr class="row-even"><td class="text-left"><p>4 pm - 4:30 pm</p></td>
 <td class="text-right"><p>Keynote Talks</p></td>
 </tr>
-<tr class="row-odd"><td class="text-left"><p>5 pm - 6 pm</p></td>
-<td class="text-right"><p>Dinner and lightning talks, sharing by attendees</p></td>
-</tr>
-<tr class="row-even"><td class="text-left"><p>6 pm - 7 pm</p></td>
+<tr class="row-odd"><td class="text-left"><p>4:30-5:00 pm</p></td>
 <td class="text-right"><p>Keynote Talks</p></td>
 </tr>
-<tr class="row-odd"><td class="text-left"><p>7 pm –</p></td>
-<td class="text-right"><p>informal discussions</p></td>
+<tr class="row-even"><td class="text-left"><p>5:00-6:30 pm</p></td>
+<td class="text-right"><p><strong>Dinner and lightning talks</strong></p></td>
+</tr>
+<tr class="row-odd"><td class="text-left"><p>5:00-5:15 pm</p></td>
+<td class="text-right"><p>Prof. Pavel Lukashev, University of Northern Iowa</p></td>
+</tr>
+<tr class="row-even"><td class="text-left"><p>5:20:5:35 pm</p></td>
+<td class="text-right"><p>Prof. Shanshan Rodriguez, Grinell College</p></td>
+</tr>
+<tr class="row-odd"><td class="text-left"><p>5:40:5:55 pm</p></td>
+<td class="text-right"><p>Dr. Subhadip Biswas, Iowa State University</p></td>
+</tr>
+<tr class="row-even"><td class="text-left"><p>6:00-6:15 pm</p></td>
+<td class="text-right"><p>TBA</p></td>
+</tr>
+<tr class="row-odd"><td class="text-left"><p>6:15 pm - 7 pm</p></td>
+<td class="text-right"><p>Keynote Talk</p></td>
+</tr>
+<tr class="row-even"><td class="text-left"><p>7 pm –</p></td>
+<td class="text-right"><p>Informal discussions</p></td>
 </tr>
 </tbody>
 </table>
