deploy: 85379227f9a93a59016ebcea7275098964d9fbc1

--- a/workshops/workshop2024.html
+++ b/workshops/workshop2024.html
@@ -518,7 +518,7 @@ document.write(`
 <td class="text-right"><p>Keynote Talk</p></td>
 </tr>
 <tr class="row-odd"><td class="text-left"><p>4:00-4:30 pm</p></td>
-<td class="text-right"><p>Keynote Talk</p></td>
+<td class="text-right"><p><strong>Prof Mark Perri, Sonoma State University</strong></p></td>
 </tr>
 <tr class="row-even"><td class="text-left"><p>5:00-6:30 pm</p></td>
 <td class="text-right"><p><strong>Dinner and lightning talks</strong></p></td>
